--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -12,6 +12,7 @@
   <title>
    Login 
   </title>
+  <script chat='true' src='https://in.fw-cdn.com/30693201/374532.js'></script>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
@@ -23,6 +24,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css' %}" rel="stylesheet" />
+  
 </head>
 
 <body class="bg-gray-200">
