--- a/myproject/myapp/templates/dashboard.html
+++ b/myproject/myapp/templates/dashboard.html
@@ -68,11 +68,11 @@ Dashboard
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white " href="{% url 'category' %}">
+            <a class="nav-link text-white " href="{% url 'configuration' %}">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">view_in_ar</i>
               </div>
-              <span class="nav-link-text ms-1">Category Management</span>
+              <span class="nav-link-text ms-1">Configuration</span>
             </a>
           </li>
         <li class="nav-item">
